# radiationUAV

./: README.md
documentation/: README.MD  _Abstract_Intro.docx
humanRobotInteraction/: README.md
humanRobotInteraction/iOS_ROS_2/iOS_ROS/: AppDelegate.h  CamViewController.m  MapViewController.h  ViewController.h  ViewController.m  main.m
humanRobotInteraction/iOS_ROS_2/iOS_ROS.xcodeproj/: project.pbxproj
humanRobotInteraction/iOS_ROS_2/iOS_ROS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
humanRobotInteraction/iOS_ROS_2/iOS_ROS.xcodeproj/project.xcworkspace/xcuserdata/iRox.xcuserdatad/: UserInterfaceState.xcuserstate
humanRobotInteraction/iOS_ROS_2/iOS_ROS.xcodeproj/xcuserdata/iRox.xcuserdatad/xcschemes/: xcschememanagement.plist
humanRobotInteraction/iOS_ROS_2/iOS_ROS/Base.lproj/: Main.storyboard
humanRobotInteraction/iOS_ROS_2/iOS_ROS/RBManager/Message Types/rosgraph_msgs/: LogMessage.h
humanRobotInteraction/iOS_ROS_2/iOS_ROS/RBManager/Message Types/sensor_msgs/: RangeMessage.m
humanRobotInteraction/iRadiationApp/: README.MD
humanRobotInteraction/iRadiationApp/ArduinoSketch/libraries/BLE/: lib_aci.cpp
humanRobotInteraction/iRadiationApp/ArduinoSketch/libraries/TinyGPS/: TinyGPS.h
humanRobotInteraction/iRadiationApp/ArduinoSketch/libraries/USB_Host_Shield_20/: Usb.cpp  Usb.h  alterations for MEGA ADK.docx  avrpins.h  hid.cpp  hid.h  hidboot.cpp  hidboot.h  hidescriptorparser.cpp  hidescriptorparser.h  hiduniversal.cpp  hiduniversal.h
humanRobotInteraction/iRadiationApp/iRadiationApp/iOS_ADK_BLE.xcodeproj/project.xcworkspace/xcshareddata/: iOS_ADK_BLE.xccheckout
humanRobotInteraction/iRadiationApp/iRadiationApp/test/: Measurement.h
humanRobotInteraction/iRadiationApp/iRadiationApp/test/Base.lproj/: LaunchScreen.xib  Main.storyboard
humanRobotInteraction/iRadiationApp/iRadiationApp/test/Images.xcassets/Image.imageset/: Contents.json
humanRobotInteraction/iRadiationApp/iRadiationApp/test/Images.xcassets/gpsFail.imageset/: Contents.json
humanRobotInteraction/iRadiationApp/iRadiationApp/test/Images.xcassets/radio.imageset/: Contents.json
humanRobotInteraction/iRadiationApp/iRadiationApp/test/Images.xcassets/radioOK.imageset/: Contents.json
humanRobotInteraction/iRadiationApp/iRadiationApp/test/Images.xcassets/uav.imageset/: Contents.json
iOS/: README.md
iOS/iOS_ROS_2/iOS_ROS/: AppDelegate.m  CamViewController.h  MapViewController.m
iOS/iOS_ROS_2/iOS_ROS.xcodeproj/project.xcworkspace/xcshareddata/: iOS_ROS.xccheckout
iOS/iOS_ROS_2/iOS_ROS/Base.lproj/: LaunchScreen.xib
iOS/iOS_ROS_2/iOS_ROS/Images.xcassets/uav.imageset/: Contents.json
iOS/iOS_ROS_2/iOS_ROSTests/: iOS_ROSTests.m
iOS/iRadiationApp/: README.MD
iOS/iRadiationApp/ArduinoSketch/iacBridge/: iacBridge.ino  pgmstrings.h
iOS/iRadiationApp/iRadiationApp/iOS_ADK_BLE.xcodeproj/: project.pbxproj
iOS/iRadiationApp/iRadiationApp/iOS_ADK_BLE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/iRadiationApp/iRadiationApp/test/: MapSettingsViewController.h  MapViewController.h  MyCircle.m  ViewController.h  ViewController.m
iOS/iRadiationApp/iRadiationApp/testTests/: testTests.m
realUAV/: README.MD
realUAV/advanced/: README.MD
realUAV/advanced/Odroid/etc/network/: interfaces
realUAV/advanced/ROS-workspace/src/my_package/: CMakeLists.txt  package.xml
realUAV/advanced/ROS-workspace/src/my_px4/: CMakeLists.txt  package.xml
realUAV/advanced/obstacleAvoidanceArduinoSketch/: RealObstacleAvoidance.ino
realUAV/advanced/obstacleAvoidanceArduinoSketch/RealObstacleAvoidance/: RealObstacleAvoidance.ino
realUAV/app/obstacleAvoidanceApp/iOS_BLE_Lidar.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
realUAV/app/obstacleAvoidanceApp/test/: AppDelegate.h  Info.plist  MapSettingsViewController.m  MapViewController.m  Measurement.m
realUAV/app/obstacleAvoidanceApp/test/Base.lproj/: Main.storyboard
realUAV/basic/: README.MD
realUAV/basic/obstacleAvoidanceApp/test/: SettingsViewController.h  SettingsViewController.m  ViewController.h  main.m
realUAV/basic/obstacleAvoidanceApp/test/Base.lproj/: LaunchScreen.xib
realUAV/basic/obstacleAvoidanceArduinoSketch/obstacleAvoidance/: obstacleAvoidance.ino
realUAV/obstacleAvoidanceApp/iOS_BLE_Lidar.xcodeproj/: project.pbxproj
realUAV/obstacleAvoidanceApp/test/: AppDelegate.m  MyCircle.h  SettingsViewController.m  ViewController.m
realUAV/obstacleAvoidanceApp/test/Images.xcassets/bluetoothFail.imageset/: Contents.json
realUAV/obstacleAvoidanceApp/test/Images.xcassets/iac.imageset/: Contents.json
realUAV/obstacleAvoidanceApp/testTests/: Info.plist
realUAV/obstacleAvoidanceArduinoSketch/obstacleAvoidance/: obsacleAvoidance.ino
report/: introduction_v01.docx  literatureReview_v04.docx
sensors/: README.MD
sensors/Applications/: README.md
sensors/Applications/mapping/Arduino/servoLidarMatlab/: servoLidarMatlab.ino
sensors/Applications/mapping/Matlab/: laserMapping.m
sensors/Applications/proximity/: README.md
sensors/Applications/proximity/proximityApp/: proximityApp.ino
sensors/LIDARLite/: README.md
sensors/LIDARLite/lidar_I2C_DSS/: lidar_I2C_DSS.ino
sensors/infrared_Sharp_gp2y0a02yk0f/: README.md  bestFit.m
sensors/infrared_Sharp_gp2y0a02yk0f/infrared_driver/: infrared_driver.ino
sensors/opticalFlow_PX4Flow/: README.md
sensors/opticalFlow_PX4Flow/px4flow_basic/: px4flow_basic.ino
sensors/ultrasonic_SRF02/: README.md
sensors/ultrasonic_SRF02/ultrasonicSRF02Serial/: ultrasonicSRF02Serial.ino
simulation/: REA  README.md
simulation/hector/src/: .rosinstall
simulation/hector/src/hector_gazebo/hector_gazebo/: .directory
simulation/hector/src/my_hector/: CMakeLists.txt  package.xml
simulation/hector/src/my_hector/action/: hoverDistance.action
simulation/hector/src/my_hector/src/: .directory  changeHeadingClient.cpp  changeHeadingServer.cpp  hover.cpp  hoverDistanceClient.cpp  hoverDistanceServer.cpp  hoverHeightClient.cpp  hoverHeightServer.cpp  liftDistanceClient.cpp  liftDistanceServer.cpp  obstacleAvoidance_v2.cpp  turn.cpp
(+88 files in other folders)
